Fixed card course buttons when course name is too long

--- a/FrontEnd/src/components/professors/subjectsList.module.css
+++ b/FrontEnd/src/components/professors/subjectsList.module.css
@@ -20,8 +20,7 @@
   font-family: inherit;
   font-weight: 600;
   margin-top: 4px;
-  padding-top: 4px;
-
+  padding: 4px 4px 0 4px;
   color: white;
 }
 
